--- a/bin/README
+++ b/bin/README
@@ -3,18 +3,19 @@ wright version ${version}
 
 Usage: wright main {OPTIONS}
 
-main              Main should specify the entry point of your app. If you have
-                  an index.html file that would be it or if you have an app.js
-                  file use that. If you already have you own server running
-                  just specifiy the full url like http://localhost:5000
+main              Specifies the entry point of your app. Point to a .html
+                  file to start a server serving that at all directory paths.
+                  If you already have you own server running specifiy the
+                  full url like http://localhost:5000
 
 Standard Options:
 
 -r,  --run        Activates Hot module reloading. This will inject any changed
                   javascript files, and then run the script or js file
-                  provided here.
+                  provided here. If this is not specified changing javascript
+                  files will cause a full refresh.
 
--s,  --serve      Specify which directory that is being served.
+-s,  --serve      Specify which local directory that is being served.
                   Defaults to folder of main file or the current directory.
 
 -w,  --watch      Any folder, file or file type to watch that should cause a
@@ -24,6 +25,9 @@ Advanced Options:
 
 -f,  --fps        Activate the chrome fps counter.
 -d,  --debug      Enable debug logging.
+-n,  --name       Name to use for chrome profile - defaults to cwd name.
+-j,  --jail       Toggles jailing of js code - defaults to true.
+-p,  --port       Start probing at this port for serving.
 -v,  --version    Output the version.
 
 For more information visit - https://github.com/porsager/wright
