--- a/bin/README
+++ b/bin/README
@@ -11,8 +11,8 @@ main              Specifies the entry point of your app. Point to a .html
 Standard Options:
 
 -r,  --run        Activates Hot module reloading. This will inject any changed
-                  javascript files, and then run the script or js file
-                  provided here. If this is not specified changing javascript
+                  javascript files, and then run the function if supplied.
+                  If this is not specified, changing javascript
                   files will cause a full refresh.
 
 -s,  --serve      Specify which local directory that is being served.
